Se actualizó el color del botón de inicio de sesión y se creo el archivo privacy_policy_html

--- a/CSS/index_layout.css
+++ b/CSS/index_layout.css
@@ -47,14 +47,14 @@ h4 {
 .button {
     width: 100%;
     padding: 10px;
-    background-color: #2B78E4;
+    background-color: #274d83;
     color: #fff;
     border: none;
     margin: 10px auto;
 }
 
 .button:hover {
-    background-color: #4888e2;
+    background-color: #3b65a0;
 }
 
 .link {
