Se agregó un fondo blanco y sombra a las politicas y condiciones para darle una mejor apariencia

--- a/CSS/main_menu_layout.css
+++ b/CSS/main_menu_layout.css
@@ -87,11 +87,10 @@ body {
     color: #1a3458
 }
 
-
-
-
-
-
+.menu-content a:hover {
+    text-decoration: underline;
+    color: #446da7;
+}
 
 footer {
     background-color: #EEEEEE;
