--- a/CSS/password_reset_layout.css
+++ b/CSS/password_reset_layout.css
@@ -48,7 +48,7 @@ body {
 .button {
     width: 100%;
     padding: 10px;
-    background-color: #2B78E4;
+    background-color: #274d83;
     color: #fff;
     border: none;
     margin: 10px auto;
