--- a/CSS/new_account_layout.css
+++ b/CSS/new_account_layout.css
@@ -47,7 +47,7 @@ h4 {
 .button {
     width: 100%;
     padding: 10px;
-    background-color: #2B78E4;
+    background-color: #274d83;
     color: #fff;
     border: none;
     margin: 10px auto;
