--- a/CSS/password_reset_layout.css
+++ b/CSS/password_reset_layout.css
@@ -13,8 +13,8 @@ body {
     width: 500px;    
     margin: auto;
     margin-top: 70px;
-    padding: 30px 40px;
-    border: 1px solid #E7E6E4;
+    padding: 30px 40px;    
+    box-shadow: 2px 2px 5px #1a3458;
 }
 
 .logo {
