--- a/CSS/password_reset_layout.css
+++ b/CSS/password_reset_layout.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #CBDEF8;
+    background-image: url(../images/Background.png);
 }
 
 .form {
@@ -59,9 +59,8 @@ body {
     margin-top: 20px;
 }
 
-.login {
-    margin-left: 5px;
-    text-decoration: none;
+.account {
+    color: white;
 }
 
 footer {
