--- a/CSS/new_account_layout.css
+++ b/CSS/new_account_layout.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #CBDEF8;
+    background-image: url(../images/Background.png);
 }
 
 .form {
@@ -56,6 +56,10 @@ h4 {
 .outside {
     text-align: center;
     margin-top: 20px;
+}
+
+.account {
+    color: white;
 }
 
 footer {
