Se agregó fondo a la barra superior de las Políticas y Condiciones

--- a/CSS/policyConditions_layout.css
+++ b/CSS/policyConditions_layout.css
@@ -8,7 +8,7 @@ body {
 }
 
 .top-bar {
-    background-color: #274d83;
+    background-image: url(../images/Background.png);
     height: 50px;
 }
 
