--- a/CSS/new_account_layout.css
+++ b/CSS/new_account_layout.css
@@ -19,9 +19,9 @@ body {
 }
 
 .logo {
-    width: 70px;
+    width: 90px;
     height: 70px;
-    background-image: url("../images/Logo_placeholder.png");
+    background-image: url("../images/Secretario_logo.png");
     display: inline-block;
     margin-bottom: 20px;
 }
