--- a/CSS/index_layout.css
+++ b/CSS/index_layout.css
@@ -19,9 +19,9 @@ body {
 }
 
 .logo {
-    width: 70px;
+    width: 90px;
     height: 70px;
-    background-image: url("../images/Logo_placeholder.png");
+    background-image: url("../images/Secretario_logo.png");
     display: inline-block;
     margin-bottom: 20px;
 }
@@ -31,7 +31,8 @@ body {
     height: 70px;
     display: inline-block;
     position: absolute;
-    padding: 10px;  
+    padding: 10px;
+    color: #1a3458;  
 }
 
 .field {
