--- a/CSS/user_settings_layout.css
+++ b/CSS/user_settings_layout.css
@@ -14,6 +14,8 @@ body {
 .top-bar {
     background-image: url(../images/Background.png);
     height: 50px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo {
@@ -25,7 +27,6 @@ body {
 }
 
 .header {
-    width: auto;
     height: 50px;
     display: inline-block;
     position: absolute;
