Se agregó la funcionalidad de crear usuario e iniciar sesión

--- a/CSS/index_layout.css
+++ b/CSS/index_layout.css
@@ -60,3 +60,17 @@ body {
     width: 80px; /* Adjust the size as needed */
     height: auto;
 }
+
+.new-account, .account {
+    margin-top: 20px;
+    display: block;
+}
+
+.new-account a, .account a {
+    color: #1a3458;
+    text-decoration: none;
+}
+
+.new-account a:hover, .account a:hover {
+    text-decoration: underline;
+}
